# DKUOJ

./: .gitignore  CMakeLists.txt  docx2xml.py  oj-template.xml
1034/: a.out  main.cpp  test1.in  test1.out  test2.in  test2.out  test3.in  test4.in  test5.out  test8.out  test9.out
1035/: main.c  test0.in  test0.out  test1.in  test1.out  test2.in  test3.in  test3.out  test4.in  test4.out  test5.in  test5.out  test6.in  test6.out  test7.in  test7.out  test8.in  test8.out  test9.in  test9.out
1051/: main.cpp  test0.in  test0.out  test1.in  test1.out  test2.in  test2.out  test3.in  test3.out  test4.in  test4.out  test5.in  test5.out  test6.in  test6.out  test7.in  test7.out  test8.in  test8.out  test9.in  test9.out
1052/: main.c  test1.in  test1.out  test2.in  test2.out  test3.in  test3.out  test4.in  test4.out  test5.in  test5.out  test6.in  test6.out  test7.in  test7.out  test8.in  test8.out  test9.in  test9.out
1054/: main.cpp  test1.out  test10.out  test11.out  test12.out  test13.out  test14.out  test15.out  test16.out  test17.out  test18.out  test2.out  test20.out  test22.out  test23.out  test24.out  test25.out  test26.out  test27.out  test28.out  test29.out  test3.out  test30.out  test31.out  test32.out  test33.out  test34.out  test35.out  test36.out  test37.out  test38.out  test39.out  test4.out  test40.out  test41.out  test42.out  test43.out  test44.out  test45.out  test47.out  (+53 more)
1055/: a.out  main.cpp  test00.in  test01.in  test02.in  test03.in  test04.in  test05.in  test06.in  test07.in  test08.in  test09.in  test10.in  test11.in  test12.in  test13.in  (+86 more)
(+128 files in other folders)
